--- a/MevetProject/rental_ads/templates/edit_rental.html
+++ b/MevetProject/rental_ads/templates/edit_rental.html
@@ -2,51 +2,68 @@
 {% load static %}
 
 {% block content %}
-  <h2 align="center">Добавить объявление</h2>
+<br>
+<h2 align="left" style="margin-left: 3%; font-size: 23px;">Редактировать объявление</h2>
+<br>
+<p style="margin-left: 3%; font-size: 16px;">В данном разделе вы непосредственно заполняете форму и выкладываете объявление на платформу.<br>Пожалуйста заносите точные данные в том числе "Адрес, Контакты, Цена".<br> При занесении точных данных клиент без проблем сможет с вами связаться!</p>
+<br>
 <br>
 <div class="form-container">
   <form method="POST" enctype="multipart/form-data" class="form-style-add-rental">
     {% csrf_token %}
-
-      <div class="form-group">
-          <label for="{{ form.category.id_for_label }}">Выберете категорию:</label>
-          {{ form.category }}
-          <label for="{{ form.title.id_for_label }}" style="padding-left: 3%;">Загаловок объявления:</label>
-          &nbsp;&nbsp;
-          {{ form.title }}
-      </div>
-
+    <div class="form-group">
+      <label for="{{ form.category.id_for_label }}">Выберите категорию:</label>
+      {{ form.category }}
+      <label for="{{ form.title.id_for_label }}" style="padding-left: 3%;">Заголовок объявления:</label>
+      &nbsp;&nbsp;
+      {{ form.title }}
+    </div>
     <br>
-
-      <div class="form-group">
-          <label for="{{ form.description.id_for_label }}">Введите описание:</label>
-          {{ form.description }}
-      </div>
-
+    <div class="form-group">
+      <label for="{{ form.description.id_for_label }}">Введите описание:</label>
+      {{ form.description }}
+    </div>
     <br>
-      <div class="form-group">
-          <label for="{{ form.address.id_for_label }}">Введите адресс:</label>
-          {{ form.address }}
-      </div>
-
-<br>
-      <div class="form-group">
-          <label for="{{ form.price.id_for_label }}">Введите цену:</label>
-          <p style="padding-left: 5.5%;"></p>{{ form.price }}
-          <label for="{{ form.contact.id_for_label }}" style="padding-left: 3%;">Ваши контакты:</label>
-          <p style="padding-left: 2%;"></p>{{ form.contact }}
-      </div>
-
+    <div class="form-group">
+      <label for="{{ form.address.id_for_label }}">Введите адрес:</label>
+      {{ form.address }}
+    </div>
     <br>
+    <div class="form-group">
+      <label for="{{ form.price.id_for_label }}">Введите цену:</label>
+      <p style="padding-left: 5.5%;"></p>{{ form.price }}
+      <label for="{{ form.contact.id_for_label }}" style="padding-left: 3%;">Ваши контакты:</label>
+      <p style="padding-left: 2%;"></p>{{ form.contact }}
+    </div>
+    <br>
+    <div class="form-group">
+    <label>Главное фото:</label>
+    <p style="padding-left: 2%;"></p>{{ form.main_image }}
+        <br>
+    {% if form.instance.main_image %}
+    <div>
+        <img src="{{ form.instance.main_image.url }}" alt="" style="width: 200px; height: auto;">
+    </div>
+{% endif %}
+</div>
+    <br>
+    <div class="form-group">
+    <label for="{{ form.images.id_for_label }}" style="margin-right: 1.5%;">Доп. фото:</label>
+    <p style="padding-left: 2%;"></p>{{ form.images }}
+        <br>
+    {% for image in form.instance.images.all %}
+        <div>
 
-      <div class="form-group">
-          <label for="{{ form.main_image.id_for_label }}">Главное фото:</label>
-          <p style="padding-left: 2%;"></p>{{ form.main_image }}
-      </div>
+            <img src="{{ image.image.url }}" alt="Rental Image" style="width: 200px; height: auto;">
+            <a href="{% url 'delete_rental_image' rental_id=form.instance.id image_id=image.id %}">Удалить</a>
+        </div>
+    {% endfor %}
+</div>
     <br>
     <center>
-    <button type="submit" class="button-submit-form-add">Сохранить</button>
+      <button type="submit" class="button-submit-form-add">Сохранить</button>
     </center>
   </form>
 </div>
+<br>
 {% endblock %}
