--- a/MevetProject/rental_ads/templates/add_rental.html
+++ b/MevetProject/rental_ads/templates/add_rental.html
@@ -2,7 +2,11 @@
 {% load static %}
 
 {% block content %}
-  <h2 align="center">Добавить объявление</h2>
+<br>
+  <h2 align="left" style="margin-left: 3%; font-size: 23px;">Добавить объявление</h2>
+<br>
+    <p style="margin-left: 3%; font-size: 16px;">В данном разделе вы непосредственно заполняете форму и выкладываете объявление на платформу.<br>Пожалуйста заносите точные данные в том числе "Адресс, Контакты, Цена".<br> При занесении точных данных клиент без проблем сможет с вами связаться!</p>
+<br>
 <br>
 <div class="form-container">
   <form method="POST" enctype="multipart/form-data" class="form-style-add-rental">
@@ -44,9 +48,16 @@
           <p style="padding-left: 2%;"></p>{{ form.main_image }}
       </div>
     <br>
+      <div class="form-group">
+    <label for="{{ form.images.id_for_label }}" style="margin-right: 1.5%;">Доп. фото:</label>
+    <p style="padding-left: 2%;"></p>{{ form.images }}
+</div>
+      <br>
     <center>
     <button type="submit" class="button-submit-form-add">Сохранить</button>
     </center>
+
   </form>
 </div>
+<br>
 {% endblock %}
