--- a/MevetProject/rental_ads/templates/favorite_rentals.html
+++ b/MevetProject/rental_ads/templates/favorite_rentals.html
@@ -1,36 +1,26 @@
 {% extends "base.html" %}
 {% block title %}Избранные объявления{% endblock %}
 {% block content %}
-    <h1>Избранные объявления</h1>
-    {% if favorites %}
-        <div class="rentals-container">
-            {% for favorite in favorites %}
-                <div class="rental-item">
-                    <a href="{% url 'rental_detail' category_name=favorite.rental.category.name rental_id=favorite.rental.id %}" style="text-decoration: none;">
-                        <img src="{{ favorite.rental.main_image.url }}">
-                        <h3 style="font-weight: bolder;">{{ favorite.rental.title }}</h3>
-                        <p>{{ favorite.rental.address|slice:":40" }}{% if favorite.rental.address|length > 40 %}...{% endif %}</p>
-                        <h4>{{ favorite.rental.price }} ₽</h4>
-                    </a>
-                    <a href="{% url 'remove_favorite' favorite_id=favorite.id %}" class="remove-favorite-link" onclick="removeFromFavorites('{{ favorite.rental.id }}'); return confirm('Вы уверены, что хотите удалить объявление из избранного?')">Удалить из избранного</a>
-                </div>
-            {% endfor %}
-        </div>
+    {% if request.user.is_authenticated %}
+        <h1>Избранные объявления</h1>
+        {% if favorites %}
+            <div class="rentals-container">
+                {% for favorite in favorites %}
+                    <div class="rental-item">
+                        <a href="{% url 'rental_detail' category_name=favorite.rental.category.name rental_id=favorite.rental.id %}" style="text-decoration: none;">
+                            <img src="{{ favorite.rental.main_image.url }}">
+                            <h3 style="font-weight: bolder;">{{ favorite.rental.title }}</h3>
+                            <p>{{ favorite.rental.address|slice:":40" }}{% if favorite.rental.address|length > 40 %}...{% endif %}</p>
+                            <h4>{{ favorite.rental.price }} ₽</h4>
+                        </a>
+                        <a href="{% url 'remove_favorite' favorite_id=favorite.id %}" class="remove-favorite-link" onclick="removeFromFavorites('{{ favorite.rental.id }}'); return confirm('Вы уверены, что хотите удалить объявление из избранного?')">Удалить из избранного</a>
+                    </div>
+                {% endfor %}
+            </div>
+        {% else %}
+            <p>У вас пока нет избранных объявлений.</p>
+        {% endif %}
     {% else %}
-        <p>У вас пока нет избранных объявлений.</p>
+        <h1>Авторизуйтесь</h1>
     {% endif %}
-
-<!-- При удалении объявления из избранного -->
-<script>
-function removeFromFavorites(rentalId) {
-  toggleFavorite(rentalId, false);
-  localStorage.setItem("rentalFavorites", JSON.stringify(JSON.parse(localStorage.getItem("favorites"))));
-}
-function getFavoriteState(rentalId) {
-  const favorites = JSON.parse(localStorage.getItem("rentalFavorites")) || {};
-  return favorites[rentalId] || false;
-}
-
-</script>
-
 {% endblock %}
