--- a/MevetProject/rental_ads/templates/messages.html
+++ b/MevetProject/rental_ads/templates/messages.html
@@ -1,18 +1,18 @@
 {% extends "base.html" %}
 {% load static %}
+
 {% block content %}
-{% for message in messages %}
-<div>
-    <p>От: {{ message.sender.username }}</p>
-    <p>{{ message.message }}</p>
-    {% if user == message.recipient %}
-    <form action="{% url 'delete_message' message_id=message.id %}" method="post">
-        {% csrf_token %}
-        <button type="submit">Удалить</button>
-    </form>
-    {% endif %}
-</div>
-{% empty %}
-<p>Нет сообщений</p>
-{% endfor %}
+<h2>Объявления с перепиской</h2>
+{% if rental_list %}
+<ul>
+    {% for rental in rental_list %}
+    <li>
+        <a href="{% url 'messages_detail' rental_id=rental.id %}">{{ rental.title }}</a>
+
+    </li>
+    {% endfor %}
+</ul>
+{% else %}
+<p>Нет объявлений с перепиской.</p>
+{% endif %}
 {% endblock %}
