--- a/MevetProject/rental_ads/templates/rental_manage.html
+++ b/MevetProject/rental_ads/templates/rental_manage.html
@@ -18,6 +18,8 @@
         <p id="display-two" class="display-button fas fa-th-large" onclick="toggleColor(2)"></p>
     </div>
     <a href="{% url 'logout' %}" class="fa-regular fa-user"> Выйти из аккаунта</a>
+    <a href="{% url 'messages' %}" class="message-rental-button far fa-envelope" style="font-size: 16px; padding-left: 1%; padding-right: 1%;">
+    <font style="font-family: 'Century Gothic', sans-serif;">Сообщения</font></a>
 </div>
 {% else %}
 <p style="margin-left: 3%; font-size: 16px;">Здравствуйте  {{ username }}<br>
@@ -28,12 +30,15 @@
 
 <div class="button-change">
     <a href="/add_rental" class="add-rental-button far fa-folder-open " style="font-size: 18px;"> <font style="font-family: 'Century Gothic', sans-serif;">Добавить Объявление</font></a>
+
 </div>
+
 <br>
 <br>
 <br>
 <br>
 <br>
+
 {% endif %}
 
 <div class="rentals-container">
@@ -50,8 +55,6 @@
 
         <a href="{% url 'edit_rental' rental_id=rental.id %}" class="edit-rental-button fa-regular far fa-edit " style="font-size: 16px;  padding-left: 1%; padding-right: 1%;"> <font style="font-family: 'Century Gothic', sans-serif;">Редактировать</font></a>
         <a href="{% url 'delete_rental' rental_id=rental.id %}" class="remove-rental-button fa-regular far fa-trash-alt" style="font-size: 16px; padding-left: 1%; padding-right: 1%;"> <font style="font-family: 'Century Gothic', sans-serif;">Удалить</font></a>
-        <a href="{% url 'messages' rental_id=rental.id %}" class="message-rental-button far fa-envelope" style="font-size: 16px; padding-left: 1%; padding-right: 1%;">
-            <font style="font-family: 'Century Gothic', sans-serif;">Сообщения {{ rental.message_count }}</font></a>
 
 
     </div>
